8231863: Crash if classpath is read from @argument file and the main gets option argument

Reviewed-by: alanb, mchung